<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project>
	<modelVersion>4.0.0</modelVersion>
	<name>test-integration</name>
	<artifactId>test-integration</artifactId>
	<groupId>br.com.test.integration</groupId>
	<version>1.0.1</version>
	<packaging>pom</packaging>

	<developers>
		<developer>
			<email>marcosruiz.jt@gmail.com</email>
			<name>Marcos Ruiz</name>
			<roles>
				<role>QA enginner</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
		<maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
		<maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<typeOut>typeOut</typeOut>
		<evidence>evidence</evidence>
		<closeBrowser>closeBrowser</closeBrowser>
		<target>target</target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<junit.jupiter.version>5.6.1</junit.jupiter.version>
		<junit.vintage.version>5.6.1</junit.vintage.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-java</artifactId>
				<version>3.14.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.9</version>
			</dependency>
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>gherkin</artifactId>
				<version>2.12.2</version>
			</dependency>
			<dependency>
				<groupId>io.appium</groupId>
				<artifactId>java-client</artifactId>
				<version>7.3.0</version>
			</dependency>
			<dependency>
				<groupId>io.minio</groupId>
				<artifactId>minio</artifactId>
				<version>6.0.13</version>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.tess4j</groupId>
				<artifactId>tess4j</artifactId>
				<version>4.5.1</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.jupiter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.jupiter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.vintage</groupId>
				<artifactId>junit-vintage-engine</artifactId>
				<version>${junit.vintage.version}</version>
			</dependency>
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>1.4</version>
			</dependency>
			<dependency>
				<groupId>com.aventstack</groupId>
				<artifactId>extentreports</artifactId>
				<version>3.1.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-io</artifactId>
				<version>1.3.2</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>1.3</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.pojosontheweb</groupId>
				<artifactId>monte-repack</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>redis.clients</groupId>
				<artifactId>jedis</artifactId>
				<version>3.2.0</version>
			</dependency>
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-server</artifactId>
				<version>3.5.3</version>
				<exclusions>
					<exclusion>
						<groupId>com.codeborne</groupId>
						<artifactId>phantomjsdriver</artifactId>
					</exclusion>
					<exclusion>
						<groupId>com.google.guava</groupId>
						<artifactId>guava</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.monte</groupId>
				<artifactId>screen-recorder</artifactId>
				<version>0.7.7</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>29.0-jre</version>
			</dependency>
			<dependency>
				<groupId>com.sendgrid</groupId>
				<artifactId>sendgrid-java</artifactId>
				<version>4.7.2</version>
			</dependency>
			<dependency>
				<groupId>com.sendgrid</groupId>
				<artifactId>java-http-client</artifactId>
				<version>4.3.6</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-to-slf4j</artifactId>
				<version>2.8.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-layout-template-json</artifactId>
				<version>2.14.1</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.log4j</groupId>
				<artifactId>jsonevent-layout</artifactId>
				<version>1.7</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>4.5.13</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven.jar.plugin.version}</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
					<excludedGroups>slow</excludedGroups>
					<argLine>-Xms256M -Xmx768M -XX:MaxPermSize=256M</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>android-empresa-tim</module>
		<module>android-ion-vivo</module>
		<module>android-varejo-claro</module>
		<module>chrome-empresa</module>
		<module>global-utils</module>
		<module>ios-empresa-oi</module>
		<module>ios-ion-claro</module>
		<module>ios-varejo-tim</module>
	</modules>

</project>